# KanMingBan

./: .gitignore  AUTHORS  Makefile.am  README.md  a  configure.ac  configure~  global.h  here  inputParser.c  inputParser.h  kmb  main.c  makefile  myprogram  table.c  table.h  userstory
.github/workflows/: c-cpp.yml
Application/: add.c  add.h  availID.c  availID.h  dataParser.c  dataParser.h  delete.c  delete.h  errorHandler.c  errorHandler.h  headerParser.c  headerParser.h  inputParser.c  kmbInit.c  kmbInit.h  makeAvailID.c  makeAvailID.h  promote.c  promote.h  regress.c  regress.h  taskString.c  taskString.h
Business/: commandParser.c  commandParser.h
Presentation/: table.c  table.h
package/: Makefile.am  configure.ac
