# Minimum Autoconf version required
AC_PREREQ([2.69])

# Project name, version, contact email
AC_INIT([kmb], [1.0], [jeremykhoois@gmail.com])

# Source code directory
AC_CONFIG_SRCDIR([main.c])

# Configuration header file
AC_CONFIG_HEADERS([config.h])

# Output Makefile
AC_CONFIG_FILES([Makefile])

# Checks for programs
AC_PROG_CC          # Check for C compiler
AC_PROG_MAKE_SET    # Check for make utility

# Enable Automake
AM_INIT_AUTOMAKE

# Output Makefile
AC_OUTPUT

